Adds new Gen IX starters Sprigatito, Fuecoco, Quaxly, as well as Arceus
Bumps the IntelliJ version to the patch version 2021.1.3

Minor tweaks to the documentation generator to make it easier to use